--- a/src/Card.css
+++ b/src/Card.css
@@ -32,3 +32,15 @@ body {
     text-align: center;
 }
 
+.loadButton { 
+    font-size: 25px; 
+    padding: 10px;
+    color:rgb(69, 8, 126);
+    background-color: lightseagreen;
+    cursor: pointer;   
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, 50%);
+    position: relative;
+}
+
