--- a/src/DetailView.css
+++ b/src/DetailView.css
@@ -27,7 +27,7 @@
 }
 
 .description { 
-    color: red;
+    color: rgb(213, 136, 136);
     font-style: italic;
     text-align: center;
     font-weight: bold;
@@ -43,8 +43,7 @@ p {
     color:rgb(69, 8, 126);
     background-color: lightseagreen;
     cursor: pointer;   
-    top: 30%;
-    left: 30%;
-    transform: translate(-50%, 50%);
     position: relative;
+    top: -40px;
+    left: 100px;
  }
