--- a/src/DetailView.css
+++ b/src/DetailView.css
@@ -5,12 +5,11 @@
 }
 
 .detailsContainer { 
-    padding: 40px;
-    margin-left: 30px;
+    padding-right: 10px;
     font-size: 20px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    width: 50%;
+    padding-left: 50px;
 }
 
 .detailsPokeId { 
@@ -29,12 +28,10 @@
 .description { 
     color: rgb(213, 136, 136);
     font-style: italic;
-    text-align: center;
-    font-weight: bold;
 }
  
 p { 
-    line-height: 1.6;
+    line-height: 1.5;
     margin: 5px;
  }
 
@@ -46,4 +43,14 @@ p {
     position: relative;
     top: -40px;
     left: 100px;
+ }
+
+ .table { 
+    display: flex;
+    flex-direction: row;  
+ }
+
+ .detailImages {
+    width: 20%;
+    padding-right: 30px;
  }
