--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 body { 
     width: 100vw;
 }
+
+@media only screen and (max-width: 600px) {
+    body {
+      align-items: center;
+      justify-content: center;
+      margin: 0;
+      width: 100%
+    }
+  }
