--- a/src/Search.css
+++ b/src/Search.css
@@ -4,9 +4,15 @@
 }
 
 .searchContainer {
-  text-align: center;  
   display: flex;
-  justify-content: center;
   align-items: center;
   flex-direction: column;
+}
+
+@media only screen and (max-width: 600px) {
+  .search {
+    width: 10em;
+    align-items: center;
+    justify-content: center;
+  }
 }
